manifests/apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abs-deployment
  labels:
    app: abs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abs
  template:
    metadata:
      labels:
        app: abs
    spec:
      containers:
        - name: abs
          # renovate: datasource=github-releases depName=advplyr/audiobookshelf
          image: abs-container-image
          securityContext:
            runAsUser: 1002
            runAsGroup: 1002
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 13378
          resources:
            requests:
              memory: "500Mi"
            limits:
              memory: "500Mi"
          volumeMounts:
            - name: abs-media-pvc
              mountPath: /audiobooks
              subPath: audiobooks
            - name: abs-media-pvc
              mountPath: /podcasts
              subPath: podcasts
            - name: abs-config-pvc
              mountPath: /config
              subPath: config
            - name: abs-config-pvc
              mountPath: /metadata
              subPath: metadata
      volumes:
        - name: abs-config-pvc
          persistentVolumeClaim:
            claimName: abs-config-pvc
        - name: abs-media-pvc
          persistentVolumeClaim:
            claimName: abs-media-pvc
