manifests/apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abs-service
spec:
  ports:
    - port: 80
      targetPort: 13378
      protocol: TCP
  selector:
    app: abs
