manifests/apps/audiobookshelf/ingress-pub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abs-pub
  annotations:
    cert-manager.io/cluster-issuer: "prod-cert-issuer"
spec:
  ingressClassName: nginx-external
  tls:
    - hosts:
        - bookshelf.blunders.dev
      secretName: abs-secret-tls-pub
  rules:
    - host: bookshelf.blunders.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: abs-service
                port:
                  number: 80
