manifests/apps/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abs
  annotations:
    cert-manager.io/cluster-issuer: "prod-cert-issuer"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bookshelf.blunders.me
    secretName: abs-secret-tls
  rules:
  - host: bookshelf.blunders.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: abs-service
            port:
              number: 80
